--- a/standalone-doc/ace3001.tex
+++ b/standalone-doc/ace3001.tex
@@ -8,7 +8,6 @@
 
 %%  Colin Ramsay - 20 Sep 1999  is the true author of this document
 %%  Greg Gamble  -  3 Jan 2000, 28-29 Feb 2000 made minor modifications:
-%%                * included Colin's pt.tex of 17 Jun 1999 [Proof Table]
 %%                * renamed Colin's version of report.cls to repcram.cls
 %%                * renamed Colin's version of size12.cls to cramsz12.clo
 %%                * edited (slightly) the text in the .tex files inputted
@@ -112,9 +111,9 @@ TBA: \dots
 
 % PROOF TABLE
 
-\chapter{Proof Tables}
+%\chapter{Proof Tables}
 
-\input{pt}
+%\input{pt}
 
 % % CONCLUSIONS
 % 
