* Various edits in line with suggestions from Joachim Neubueser.   - In particular, `Other Options' has become Appendix B   - The previous chapters 7. and 8. are now Appendices A and C * Added preliminary descriptions of:   - `ACEAllEquivPresentations' (interactively implement `aep' option)   - `ACERandomEquivPresentations' (interactively implement `rep' option)

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -6,6 +6,9 @@
 %%
 %H  $Id$
 %%
+%Y  Copyright (C) 2000  Centre for Discrete Mathematics and Computing
+%Y                      Department of Computer Science & Electrical Eng.
+%Y                      University of Queensland, Australia.
 %%
 \input ../../../doc/gapmacro
 
@@ -47,6 +50,8 @@
 \Chapters
 \Input{ace}
 \Appendices
+\Input{aceapp}
+\EndMatter
 \Bibliography
 \Index
 \EndOfBook
