* The manual was split into separate files because the correct   functioning of the GAP Help browser depends on each chapter being   in a separate file. * Improved description of:   - `ACEAllEquivPresentations' (interactively implements `aep' option)   - `ACERandomEquivPresentations' (interactively implements `rep' option) * Replaced aceapp.tex by messages.tex, otheroptions.tex, examples.tex   (the three appendices).

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -11,6 +11,7 @@
 %Y                      University of Queensland, Australia.
 %%
 \input ../../../doc/gapmacro
+\def\ACE{{\sf ACE}}
 
 \BeginningOfBook{ace}
 
@@ -49,8 +50,15 @@
 \immediate\write\citeout{\bs bibdata{./manual,../../../doc/mrabbrev,../../../doc/manual}}
 \Chapters
 \Input{ace}
+\Input{install}
+\Input{basics}
+\Input{options}
+\Input{strategies}
+\Input{interact}
 \Appendices
-\Input{aceapp}
+\Input{messages}
+\Input{otheroptions}
+\Input{examples}
 \EndMatter
 \Bibliography
 \Index
